# CrystalGPU

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
.lens/: project.json
doc/: doc.md  todo.md
doc/glan/: doc.md
include/CrystalGPU/: device.h  gpu.h
include/CrystalGPU/glan/: dtype.h  glan.h  procedure.h  proxy.h  storage.h  type.h
include/CrystalGPU/impl/: device.h  global.h  source_code.h  task.h
include/CrystalGPU/impl/glan/: alias.h  argument.h  block.h  constant.h  dtype.h  expression.h  function.h  glan.h  immediate.h  operator.h  parameter.h  policy.h  procedure.h  proxy.h  readonly.h  return.h  stack_variable.h  statement.h  storage.h  swizzle_dtype.h  symbol.h  symbol_table.h  type.h  utility.h  variable.h
include/CrystalGPU/impl/glan/code_gen/: argument.h  atomic.h  block.h  builtin.h  constant.h  expression.h  function.h  immediate.h  procedure.h  readonly.h  return.h  statement.h  tag.h  tuple.h  type.h  variable.h
include/CrystalGPU/impl/glan/semantic/: builtin.h  expression.h  immediate.h  readonly.h  type.h  variable.h
lib/WebGPU-distribution/: CMakeLists.txt
src/: device.cpp  gpu.cpp
src/impl/: webgpu.cpp
test/: CMakeLists.txt
test/GoogleTest/: CMakeLists.txt
